@@ -182,6 +182,7 @@ v1.2.0  --> 1.2.x :
 		- Updated COOKIES file
 		- Updated video_types to contain .ts by default
 		- Fix textual typo in glftpd.tcl
+		- Improve stats-gathering for dayup/wkup/monthup/allup
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
